03 Kubernetes Manifests/Ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socks-shop-ingress
  namespace: socks-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - orama.click               #Your domain
      secretName:                   #Your TLS Secret   
  rules:
    - host: orama.click             #Your domain   
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socks-shop
                port:
                  number: 80
